--- a/src/main/resources/templates/no-search-journeys-results.html
+++ b/src/main/resources/templates/no-search-journeys-results.html
@@ -12,16 +12,17 @@
 <div class="govuk-width-container" layout:fragment="content" th:inline="text">
 
     <section class="mt5">
-        <div th:if="${form.from != '' && form.to != ''}">
-            <p class="govuk-heading-m mv5">0 results found for pick up location <span th:text="${form.from}"/> and drop off
-                location <span
-                        th:text="${form.to}"/>.</p>
+        <div th:if="${pickUpLocation != '' && dropOffLocation != ''}">
+            <p class="govuk-heading-m mv5">0 results found for pick up location <span th:text="${pickUpLocation}"/> and
+                drop off location <span
+                        th:text="${dropOffLocation}"/>.</p>
         </div>
-        <div th:if="${form.from != ''}">
-            <p class="govuk-heading-m mv5">0 results found for pick up location <span th:text="${form.from}"/>.</p>
+        <div th:if="${pickUpLocation != '' && dropOffLocation == ''}">
+            <p class="govuk-heading-m mv5">0 results found for pick up location <span th:text="${pickUpLocation}"/>.</p>
         </div>
-        <div th:if="${form.to != ''}">
-            <p class="govuk-heading-m mv5">0 results found for drop off location <span th:text="${form.to}"/>.</p>
+        <div th:if="${pickUpLocation == '' && dropOffLocation != ''}">
+            <p class="govuk-heading-m mv5">0 results found for drop off location <span th:text="${dropOffLocation}"/>.
+            </p>
         </div>
     </section>
 
