--- a/src/main/resources/templates/no-search-journeys-results.html
+++ b/src/main/resources/templates/no-search-journeys-results.html
@@ -11,6 +11,8 @@
 
 <div class="govuk-width-container" layout:fragment="content" th:inline="text">
 
+    <div th:replace="fragments/flash-messages.html :: flash-messages(dismissFallback='/journeys')"></div>
+
     <section class="mt5">
         <div th:if="${pickUpLocation != '' && dropOffLocation != ''}">
             <p class="govuk-heading-m mv5">0 results found for pick up location <span th:text="${pickUpLocation}"/> and
