P4-2515 some test improvement and refactoring around prices.

--- a/src/main/resources/templates/add-price.html
+++ b/src/main/resources/templates/add-price.html
@@ -58,7 +58,7 @@
             <button class="govuk-button mv3 mr3" data-module="govuk-button">
                 Confirm and save
             </button>
-            <a href="/dashboard" class="govuk-link">Cancel</a>
+            <a href="/journeys" class="govuk-link">Cancel</a>
         </div>
     </form>
 </div>
