--- a/src/main/resources/templates/search-journeys.html
+++ b/src/main/resources/templates/search-journeys.html
@@ -12,7 +12,7 @@
 <div class="govuk-width-container" layout:fragment="content">
 
     <div class="mv4">
-        <h1 class="govuk-heading-xl mv2">Manage Journey Price Catalogue</h1>
+        <h1 class="govuk-heading-xl mv2" th:inline="text">Manage Journey Price Catalogue [[${contractualYearStart}]] to [[${contractualYearEnd}]]</h1>
     </div>
 
     <h2 class="govuk-heading-l mv2 pt3">Find Journeys</h2>
