--- a/src/main/resources/templates/add-price.html
+++ b/src/main/resources/templates/add-price.html
@@ -51,7 +51,7 @@
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             <strong class="govuk-warning-text__text">
                 <span class="govuk-warning-text__assistive">Warning</span>
-                <span th:inline="text">Please note the added price will be effective for all instances of this journey undertaken by in [[${supplier}]] the current contractual year [[${contractualYearStart}]] to [[${contractualYearEnd}]].</span>
+                <span th:inline="text">Please note the added price will be effective for all instances of this journey undertaken by [[${supplier}]] in the current contractual year [[${contractualYearStart}]] to [[${contractualYearEnd}]].</span>
             </strong>
         </div>
         <div class="flex items-center">
