--- a/src/main/resources/templates/moves-by-type.html
+++ b/src/main/resources/templates/moves-by-type.html
@@ -23,15 +23,8 @@
         </ol>
     </div>
 
-    <div class="flex justify-between items-end mv4">
-        <div class="flex-auto">
-            <h1 class="govuk-heading-xl ma0" th:inline="text">[[${moveType}]]</h1>
-        </div>
-        <div>
-            <a th:href="@{|/generate-prices-spreadsheet/|}"
-               th:attr="download=${'moves-' + '.csv'}"
-               class="ma0 govuk-link govuk-heading-s download-icon">Download all moves</a>
-        </div>
+    <div class="mv4">
+        <h1 class="govuk-heading-xl ma0" th:inline="text">[[${moveType}]]</h1>
     </div>
 
     <div th:replace="fragments/move-summary.html :: summary"></div>
