--- a/src/main/resources/templates/map-location.html
+++ b/src/main/resources/templates/map-location.html
@@ -11,22 +11,38 @@
 
 <div class="govuk-width-container" layout:fragment="content">
 
-    <div class="mv4">
-        <div th:if="${form.operation == 'create'}">
-            <h1 class="govuk-heading-xl mv2" th:inline="text">Map location</h1>
-            <p class="govuk-heading-s govuk-body govuk-!-font-weight-regular">Please add a Schedule 34 location name for this NOMIS agency ID.</p>
-        </div>
-        <div th:if="${form.operation == 'update'}">
-            <h1 class="govuk-heading-xl mv2" th:inline="text">Update location</h1>
-            <p class="govuk-heading-s govuk-body govuk-!-font-weight-regular">Update Schedule 34 location.</p>
-        </div>
-    </div>
-
     <form th:action="@{/map-location}" th:object="${form}" method="post">
+        <div class="govuk-error-summary mv3" aria-labelledby="error-summary-title" role="alert" tabindex="-1"
+             data-module="govuk-error-summary" th:if="${#fields.hasErrors('*')}">
+            <h2 class="govuk-error-summary__title" id="error-summary-title">
+                There is a problem
+            </h2>
+            <div class="govuk-error-summary__body">
+                <ul class="govuk-list govuk-error-summary__list">
+                    <li>
+                        <a href="#location-name" th:errors="*">Error</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="mv4">
+            <div th:if="${form.operation == 'create'}">
+                <h1 class="govuk-heading-xl mv2" th:inline="text">Map location</h1>
+                <p class="govuk-heading-s govuk-body govuk-!-font-weight-regular">Please add a Schedule 34 location name
+                    for this NOMIS agency ID.</p>
+            </div>
+            <div th:if="${form.operation == 'update'}">
+                <h1 class="govuk-heading-xl mv2" th:inline="text">Update location</h1>
+                <p class="govuk-heading-s govuk-body govuk-!-font-weight-regular">Update Schedule 34 location.</p>
+            </div>
+        </div>
+
+
         <div class="govuk-form-group" th:classappend="${#fields.hasErrors('*')} ? 'govuk-form-group--error'">
             <ol class="list pl0">
                 <li class="mv3">
-                    <p class="govuk-label govuk-body govuk-!-font-weight-bold">Pick up location</p>
+                    <p class="govuk-label govuk-body govuk-!-font-weight-bold">Location</p>
                     <p th:text="*{agencyId}" class="govuk-body ma0"></p>
                     <input type="hidden" th:field="*{agencyId}" class="dn"/>
                     <input type="hidden" th:field="*{operation}" class="dn"/>
@@ -60,6 +76,13 @@
                     </select>
                 </li>
             </ol>
+        </div>
+        <div class="govuk-warning-text mv3">
+            <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+            <strong class="govuk-warning-text__text">
+                <span class="govuk-warning-text__assistive">Warning</span>
+                <span th:inline="text">Mapping a Schedule 34 location name will not update location names in NOMIS.</span>
+            </strong>
         </div>
         <div class="flex items-center">
             <button class="govuk-button mv3 mr3" data-module="govuk-button">
