--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -34,8 +34,37 @@
         <div class="govuk-grid-column-one-third tr">
             <a th:href="@{|/generate-prices-spreadsheet/${#strings.toLowerCase(supplier.name())}?moves_from=${#temporals.format(startOfMonthDate, 'yyyy-MM-dd')}|}"
                th:attr="download=${'moves-' + #temporals.format(endOfMonthDate, 'MMMM-yyyy') + '.csv'}"
-               class="ma0 govuk-link govuk-heading-s download-icon dib">Download all moves</a>
+               class="ma0 govuk-link govuk-heading-s download-icon dib" onclick="downloading(this)">Download all moves</a>
+
         </div>
+        <script>
+            let inProgress = false
+            function downloading(element) {
+                if (inProgress) {
+                    return
+                }
+                inProgress = true
+                let href
+                let text
+                let download
+                setTimeout(() => {
+                    href = element.getAttribute('href')
+                    text = element.innerHTML
+                    download = element.getAttribute('download')
+                    element.setAttribute('href', '#')
+                    element.removeAttribute('download')
+                    element.innerHTML = 'Downloading...'
+                    element.classList.remove('govuk-link', 'download-icon')
+                }, 100)
+                setTimeout(() => {
+                    element.setAttribute('href', href)
+                    element.setAttribute('download', download)
+                    element.innerHTML = text
+                    inProgress = false
+                    element.classList.add('govuk-link', 'download-icon')
+                }, 10 * 1000)
+            }
+        </script>
     </div>
 
     <div th:replace="fragments/summary.html :: summary"></div>
