P4-2529 Search by move reference ID
New findByReference method in MoveRepository
Used by findMoveByReference in MoveService

HtmlController has new findMove GET and performFindMove POST methods
Successful search redirects to the moves details page.
Unsuccessful search redirects back to the find a move search form with appropriate error.

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -76,6 +76,11 @@
 
     <section class="mt5">
         <h2 class="govuk-heading-m pt1 bt bw2">Moves by type</h2>
+
+        <div>
+            <a th:href="@{'/find-move'}" class="govuk-heading-s govuk-link">Find by move reference ID</a>
+        </div>
+
         <div th:each="summary: ${summaries}">
             <div th:include="fragments/move-by-type.html :: move" class="mv3"></div>
         </div>
