--- a/src/main/resources/templates/find-move.html
+++ b/src/main/resources/templates/find-move.html
@@ -21,8 +21,8 @@
         <div class="govuk-form-group" th:classappend="${#fields.hasErrors('*')} ? 'govuk-form-group--error'">
             <div th:switch="${#request.getParameter('no-results-for')}">
                 <p th:case="${null}"></p>
-                <p th:case="''" class="govuk-error-message">
-                    <span class="govuk-visually-hidden">Error:</span> Please enter a move reference ID
+                <p th:case="'invalid-reference'" class="govuk-error-message">
+                    <span class="govuk-visually-hidden">Error:</span> Please enter a valid move reference ID
                 </p>
                 <p th:case="*" class="govuk-error-message">
                     <span class="govuk-visually-hidden">Error:</span> Could not find move for that move reference ID
