P4-2596: Add 'Approved Premises' and 'Probation' location types

--- a/src/main/resources/templates/map-location.html
+++ b/src/main/resources/templates/map-location.html
@@ -62,6 +62,7 @@
                         type</label>
                     <select name="location-type" id="location-type-id" th:field="*{locationType}" class="govuk-select">
                         <option value="AP">Airport</option>
+                        <option value="APP">Approved Premises</option>
                         <option value="CC">Crown Court</option>
                         <option value="CM">Combined Court</option>
                         <option value="CO">County Court</option>
@@ -69,8 +70,9 @@
                         <option value="IM">Immigration</option>
                         <option value="MC">Mag Court</option>
                         <option value="O">Other</option>
-                        <option value="PR">Prison</option>
                         <option value="PS">Police</option>
+                        <option value="PR">Prison</option>
+                        <option value="PB">Probation</option>
                         <option value="SCH">SCH</option>
                         <option value="STC">STC</option>
                     </select>
